--- a/src/main/resources/templates/layout/ShopArticle.html
+++ b/src/main/resources/templates/layout/ShopArticle.html
@@ -20,14 +20,15 @@
         <ul style="list-style: none;
             padding-left: 0px;">
             <button th:each="shopNames :${shopName}">
-                <li th:attr="onclick='getShopInfo(\'' + ${shopNames}+'\')'" th:text="${shopNames}"></li>
+                <li th:attr="onclick='getShopInfo(\'' + ${shopNames}+'\'), getReview(\'' + ${shopNames}+'\')'"
+                    th:text="${shopNames}"></li>
             </button>
         </ul>
     </nav>
     <!-- shop 이미지-->
     <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
 
-<!--    가게 정보 보여주기 위함-->
+    <!--    가게 정보 보여주기 위함-->
     <div id="div-shopInfo">
 
     </div>
@@ -36,10 +37,13 @@
     <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
 
     <!--    가게 정보 보여주기 위함-->
-    <div id="div-designerInfo" class="row">
+    <div id="div-designerInfo">
 
     </div>
 
+    <div id="div-review">
+
+    </div>
 
 
 </article>
