--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -74,7 +74,8 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input type="text" onclick="checkDate()" onchange="checkDate()"
+                                                    <input type="text" onclick="checkDate()"
+                                                           onchange="checkDate(), doubleTimeCheck()"
                                                            id="dp1" class="datepicker"
                                                            placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
                                                         class="fa fa-calendar"></span>
@@ -84,13 +85,13 @@
                                                            placeholder="시간을 선택해 주세요" name="Time" disabled="true">
                                                     <!--값 뜨는곳-->
                                                     <span class="time">값을 정해주세요.</span>
-                                                    <!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
+                                                    <!-- dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 hidden 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
 
-                                            <div class="card-body p-3 p-sm-5">
-                                                <ul onclick="checkTime()" onchange="checkTime()"
+                                            <div id="div-time" class="card-body p-3 p-sm-5">
+                                                <ul id="time" onclick="checkTime()" onchange="checkTime()"
                                                     class="row text-center mx-0">
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">10:00AM</div>
@@ -110,7 +111,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">12:30PM</div>
                                                     </li>
-
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">1:00PM</div>
                                                     </li>
@@ -129,7 +129,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">3:30PM</div>
                                                     </li>
-
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">4:00PM</div>
                                                     </li>
@@ -167,7 +166,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">9:30PM</div>
                                                     </li>
-
                                                 </ul>
                                             </div>
                                         </form>
@@ -244,6 +242,7 @@
                     <input hidden name="apointUserPh" id="apointUserPh" th:value="${session.user.userPh}">
                     <input hidden id="apointUserMail" th:value="${session.user.userMail}">
                     <input hidden name="apointUserName" id="apointUserName" th:value="${session.user.userName}">
+                    <input hidden name="apointDesignerNum" th:value="${session.dInfo.designerNum}">
 
                     <div class="d-grid gap-2">
                         <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="payment()">
