--- a/src/main/resources/templates/designerUpdate.html
+++ b/src/main/resources/templates/designerUpdate.html
@@ -1,60 +1,43 @@
+<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>디자이너 추가</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>디자이너 수정</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        function uploadFile() {
-            var file = $("#Img");
-            var fileVal = $("#Img").val();
-            console.log(fileVal);
-            if (fileVal != "") {
-                var ext = fileVal.split('.').pop().toLowerCase(); //확장자분리
-                //아래 확장자가 있는지 체크
-                if ($.inArray(ext, ['jpg', 'jpeg', 'gif', 'png']) == -1) {
-                    alert('이미지 파일만 선택해주세요.');
-                    file.val('');
-                    $("#designerImg").val(file.val());
-                } else {
-                    $("#designerImg").val(file.val());
+        $(document).ready(function () {
+            var optionList = [];
+            var dPosition = $("#dPosition").val();
+            $("#designerPosition option").each(function () {
+                optionList.push($(this));
+            });
+            for (let i = 0; i < optionList.length; i++) {
+                if (optionList[i].text() == dPosition){
+                    optionList[i].prop("selected", true);
+                    break;
                 }
             }
-        }
+        });
     </script>
 </head>
-
 <body>
-<!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
-
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted">디자이너 추가</h1>
-        </div>
-    </div>
-</header>
-
-
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form action="/insertDesigner" class="border border-secondary rounded-3 p-5" enctype="multipart/form-data">
-                <!-- designerShop값 넘겨주기 위함-->
-                <input hidden name="designerShop" th:value="${session.shop.shopName}">
+            <form action="/designerInfoUpdate" class="border border-secondary rounded-3 p-5" enctype="multipart/form-data">
+
+                <input hidden th:value="${session.designerInfo.designerShop}" name="designerShop">
                 <!-- 디자이너 이름 -->
                 <div class="p-2">
                     <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                         디자이너 이름
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="designerName" name="designerName" placeholder=" ">
-                        <label for="designerName" class="text-secondary opacity-50">디자이너의 이름을 입력해주세요.</label>
+                        <input type="text" class="form-control" th:value="${session.designerInfo.designerName}"
+                               id="designerName" name="designerName" placeholder=" ">
+                        <label for="designerName" class="text-secondary opacity-50">디자이너의 이름</label>
                     </div>
                 </div>
 
@@ -64,7 +47,9 @@
                         디자이너 이미지 추가
                     </div>
                     <div class="mb-3">
-                        <input onclick="uploadFile()" onchange="uploadFile()" type="file" id="Img" accept=".jpg,.png,.gif,.jpeg" placeholder=" ">
+                        <input onclick="uploadFile()" onchange="uploadFile()" type="file" id="Img"
+                               accept=".jpg,.png,.gif,.jpeg" placeholder=" "
+                               th:value="${session.designerInfo.designerImg}">
                         <input hidden id="designerImg" name="designerImg">
                     </div>
                 </div>
@@ -75,7 +60,8 @@
                         예약금
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="apointPrice" name="apointPrice" placeholder=" ">
+                        <input type="text" class="form-control" id="apointPrice" name="apointPrice" placeholder=" "
+                               th:value="${session.designerInfo.apointPrice}">
                         <label for="apointPrice" class="text-secondary opacity-50">예약금</label>
                     </div>
                 </div>
@@ -87,10 +73,16 @@
                     </div>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="designerIntroduce" name="designerIntroduce"
+                               th:value="${session.designerInfo.designerIntroduce}"
                                placeholder=" ">
                         <label for="designerIntroduce" class="text-secondary opacity-50">한줄 소개</label>
                     </div>
                 </div>
+
+<!--                포지션 비교-->
+                <input hidden id="dPosition" th:value="${session.designerInfo.designerPosition}">
+<!--                수정하기 위함-->
+                <input hidden name="designerNum" th:value="${session.designerInfo.designerNum}">
 
                 <!-- 직급 -->
                 <div class="p-2">
@@ -100,7 +92,7 @@
                     <div class="form-floating mb-3">
                         <select id="designerPosition" name="designerPosition"
                                 class="form-select form-select-sm pt-2 fw-semibold">
-                            <option value="selectd">직급을 선택해주세요</option>
+                            <option value="">직급을 선택해주세요</option>
                             <option value="디자이너">디자이너</option>
                             <option value="팀장">팀장</option>
                             <option value="부원장">부원장</option>
@@ -113,21 +105,15 @@
                 <div class="container">
                     <div class="container-fluid">
                         <div class="d-grid gap-2">
-                            <button class="btn btn-outline-dark" type="submit">추가</button>
-                            <button class="btn btn-outline-secondary" type="button" onclick="history.back()">취소</button>
+                            <button class="btn btn-outline-dark" type="submit">수정하기</button>
+                            <button class="btn btn-outline-secondary" onclick="history.go(-2)">취소</button>
                         </div>
                     </div>
                 </div>
-
             </form>
         </div>
     </div>
 
 </main>
-
-
-<!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
-
 </body>
 </html>
