--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -8,10 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
-    <!--    <script>-->
-    <!--        $(document).r-->
-    <!--    </script>-->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!--    마이페이지로 세션 값 없이 바로 접근시 처리하기 위한 스크립트-->
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -22,18 +19,75 @@
         }
         /*]]>*/
     </script>
-<!--    예약목록을 바로 인식하지 못해서 새로고침 해줌-->
-    <script>
-        $(document).ready(function () {
-            location.reload();
-        });
-    </script>
     <style>
         .table th, .table td {
             text-align: center;
             vertical-align: middle !important;
         }
     </style>
+
+    <!--    예약 취소-->
+    <script>
+        function apointCancel(obj) {
+            let yn = confirm("정말 예약을 취소하시겠습니까?");
+            if (yn == false) {
+                alert("예약취소가 취소되었습니다.");
+            } else {
+                let par = obj.parent();
+                let userId = $("#userId").val();
+                let apointShop = par.find('td:eq(0)').text();
+                let apointDesigner = par.find('td:eq(1)').text();
+                let apointDate = par.find('td:eq(5)').text();
+                let apointTime = par.find('td:eq(6)').text();
+                $.ajax({
+                    url: "/apointCancel",
+                    type: "post",
+                    data: {
+                        userId: userId,
+                        apointShop: apointShop,
+                        apointDesigner: apointDesigner,
+                        apointDate: apointDate,
+                        apointTime: apointTime
+                    },
+                    success: function () {
+                        alert("예약이 취소되었습니다.")
+                        location.reload();
+                    },
+                    error: function () {
+                        alert("실패");
+                    }
+                })
+            }
+        }
+    </script>
+
+    <!--    리뷰 작성-->
+    <script>
+        function writeReview(obj) {
+            let par = obj.parent();
+
+            let apointShop = par.find('td:eq(0)').text();
+            let apointDesigner = par.find('td:eq(1)').text();
+            let apointDate = par.find('td:eq(5)').text();
+            let apointTime = par.find('td:eq(6)').text();
+            $.ajax({
+                url: "/shopReviewWriter",
+                type: "post",
+                data: {
+                    apointShop: apointShop,
+                    apointDesigner: apointDesigner,
+                    apointDate: apointDate,
+                    apointTime: apointTime
+                },
+                success: function () {
+                    location.href="/reviewWrite";
+                },
+                error: function () {
+                    alert("실패");
+                }
+            })
+        }
+    </script>
 </head>
 
 <body>
@@ -48,7 +102,7 @@
 </header>
 
 
-<main>
+<main onLoad=”if (location.href.indexOf(‘reload’)==-1) location.replace(location.href+’?reload’)”>
     <div class="container">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-5">
@@ -174,10 +228,10 @@
                                     <th>컷</th>
                                     <th>펌</th>
                                     <th>염색</th>
-                                    <th>클리닉</th>
                                     <th>날짜</th>
                                     <th>시간</th>
                                     <th>리뷰작성</th>
+                                    <th>예약취소</th>
                                 </tr>
                                 </thead>
                                 <tbody class="table-striped">
@@ -189,7 +243,16 @@
                                     <td th:text="${apointsList.apointColor}"></td>
                                     <td th:text="${apointsList.apointDate}"></td>
                                     <td th:text="${apointsList.apointTime}"></td>
-                                    <td><button class="btn btn-outline-primary" onclick="location.href='/shopReviewWriter'">리뷰 작성</button></td>
+                                    <td>
+                                        <button class="btn btn-outline-primary" type="button"
+                                                onclick="writeReview($(this).parent())">리뷰 작성
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-outline-warning" type="button"
+                                                onclick="apointCancel($(this).parent())">예약취소
+                                        </button>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
