--- a/src/main/resources/templates/layout/Footer.html
+++ b/src/main/resources/templates/layout/Footer.html
@@ -8,12 +8,13 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
-    <script></script>
 </head>
 <body>
 
 <footer th:fragment="mainFooter" id="footer" class="text-center">
-    <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <p class="copyright">&copy; Spring Boot 1Team.<br>
+        Design: <a href="https://html5up.net">HTML5 UP</a> & Logidell</p>
+
 </footer>
 
 </body>
