--- a/src/main/resources/static/assets/sass/layout/_footer.scss
+++ b/src/main/resources/static/assets/sass/layout/_footer.scss
@@ -14,14 +14,14 @@
 		));
 		width: 100%;
 		max-width: 100%;
-		margin-top: 2rem;
+		margin-top: 3rem;
 		text-align: center;
 
 		.copyright {
 			letter-spacing: _font(letter-spacing);
 			font-size: 0.6rem;
 			opacity: 0.75;
-			//margin-bottom: 0;
+			margin-bottom: 5px;
 			text-transform: uppercase;
 		}
 
