--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -29,7 +29,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!--    값 확인, 결제 -->
     <script type="text/javascript" src="useJs/apoint.js"></script>
-
     <!--  --------------------------------------------------------------------->
     <style>
         ul {
@@ -43,10 +42,9 @@
     </style>
 </head>
 
-<body class="align-center">
+<body>
 
 <!--예약 페이지도 마찬가지로 template x -->
-
 <header class="container mb-2 p-0">
     <div class="container m-0">
         <span class="image main"><img src="images/pic_appointment.jpg" alt=""/></span>
@@ -54,8 +52,7 @@
 </header>
 
 
-
-<main>
+<main >
     <div class="container">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3" id="frm" action="/insertAppointment" method="post">
@@ -72,21 +69,20 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input type="text" onclick="checkDate()" onchange="checkDate()" id="dp1" class="datepicker" placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
+                                                    <input type="text" onclick="checkDate()" onchange="checkDate(), doubleTimeCheck()" id="dp1" class="datepicker" placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
                                                         class="fa fa-calendar"></span>
                                                     <!--값 뜨는곳-->
                                                     <span class="date">값을 정해주세요.</span>
                                                     <input type="text" class="datepicker" id="dp2" placeholder="시간을 선택해 주세요" name="Time" disabled="true">
                                                     <!--값 뜨는곳-->
                                                     <span class="time">값을 정해주세요.</span>
-                                                    <!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
+                                                    <!-- dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 hidden 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
 
-                                            <div class="card-body p-3 p-sm-5">
-                                                <ul onclick="checkTime()" onchange="checkTime()"
-                                                    class="row text-center mx-0">
+                                            <div id="div-time" class="card-body p-3 p-sm-5">
+                                                <ul id="time" onclick="checkTime()" onchange="checkTime()" class="row text-center mx-0">
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">10:00AM</div>
                                                     </li>
@@ -105,7 +101,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">12:30PM</div>
                                                     </li>
-
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">1:00PM</div>
                                                     </li>
@@ -124,7 +119,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">3:30PM</div>
                                                     </li>
-
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">4:00PM</div>
                                                     </li>
@@ -162,7 +156,6 @@
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">9:30PM</div>
                                                     </li>
-
                                                 </ul>
                                             </div>
                                         </form>
@@ -198,8 +191,7 @@
                             Perm
                         </div>
                         <div class="form-floating mb-3">
-                            <select onclick="checkPerm()" onchange="checkPerm()" id="apointPerm" name="apointPerm"
-                                    class="form-select form-select-sm pt-2 fw-semibold">
+                            <select onclick="checkPerm()" onchange="checkPerm()" id="apointPerm" name="apointPerm" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value=" ">원하는 스타일을 선택해 주세요</option>
                                 <option value="해당 없음">해당 없음</option>
                                 <option value="맡기기">맡기기</option>
@@ -218,8 +210,7 @@
                             Color
                         </div>
                         <div class="form-floating mb-3">
-                            <select onclick="checkColor()" onchange="checkColor()" id="apointColor" name="apointColor"
-                                    class="form-select form-select-sm pt-2 fw-semibold">
+                            <select onclick="checkColor()" onchange="checkColor()" id="apointColor" name="apointColor" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value=" ">원하는 스타일을 선택해 주세요</option>
                                 <option value="해당 없음">해당 없음</option>
                                 <option value="맡기기">맡기기</option>
@@ -239,6 +230,7 @@
                     <input hidden name="apointUserPh" id="apointUserPh" th:value="${session.user.userPh}">
                     <input hidden id="apointUserMail" th:value="${session.user.userMail}">
                     <input hidden name="apointUserName" id="apointUserName" th:value="${session.user.userName}">
+                    <input hidden name="apointDesignerNum" th:value="${session.dInfo.designerNum}">
 
                     <div class="d-grid gap-2">
                         <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="payment()">
