--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -15,14 +15,35 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         if ([[${message}]] != null) {
-            // console.log("테스트");
             var message = [[${message}]];
             alert(message);
             location.href = "/main";
         }
         /*]]>*/
     </script>
-    <!--    예약목록을 바로 인식하지 못해서 새로고침 해줌-->
+    <script>
+        function designerUpdate(obj) {
+            var par = obj.parent();
+            let dName = par.find('td:eq(0)').text();
+            let dShop = par.find('td:eq(4)').text();
+            $.ajax({
+                url: "/designerUpdate",
+                type: "post",
+                data: {dName: dName, dShop: dShop},
+                success: function (data) {
+                    location.href = '/designerUpdatePage';
+                }, errors: function () {
+                    alert("실패");
+                }
+            });
+        }
+    </script>
+    <style>
+        .table th, .table td {
+            text-align: center;
+            vertical-align: middle !important;
+        }
+    </style>
 
 </head>
 
@@ -35,7 +56,8 @@
     </div>
 </header>
 
-<main>
+<!--바로 값이 안뜨는게 있어서 새로고침 해줌-->
+<main onLoad=”if (location.href.indexOf(‘reload’)==-1) location.replace(location.href+’?reload’)”>
     <div class="container pb-5">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-5">
@@ -49,6 +71,10 @@
 
                     <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
                             type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
+                    </button>
+
+                    <button class="nav-link" id="nav-designer-tab" data-bs-toggle="tab" data-bs-target="#nav-designer"
+                            type="button" role="tab" aria-controls="nav-designer" aria-selected="false"> 디자이너 목록
                     </button>
                 </div>
 
@@ -121,7 +147,7 @@
                                     <div class="col-2">
                                         <label for="shopBusiness" class="col-form-label">사업자 등록 번호</label>
                                     </div>
-                                    <!--  회원 phone / 텍스트 뷰 라벨 -->
+                                    <!--  회원 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
                                         <input id="shopBusiness" class="form-control" type="tel" th:value="${session.shop.shopBusiness}" readonly>
                                     </div>
@@ -223,7 +249,8 @@
                         </div>
                     </div>
                     <div class="tab-content" id="nav-apoint-tabContent">
-                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel" aria-labelledby="nav-apoint-tab" tabinde>
+                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel"
+                            aria-labelledby="nav-apoint-tab" tabindex="0">
                             <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
                                 예약 목록
                             </div>
@@ -256,10 +283,49 @@
                             <h2 th:if="${session.apoints} == null">조회된 예약목록이 없습니다.</h2>
                         </div>
                     </div>
+                    <!--                    디자이너 목록-->
+                    <div class="tab-content" id="nav-designer-tabContent">
+                        <div class="tab-pane fade show" id="nav-designer" role="tabpanel" aria-labelledby="nav-designer-tab">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary" tabindex="0">
+                                디자이너 목록
+                            </div>
+                            <table th:if="${session.designers} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>디자이너 이름</th>
+                                    <th>직급</th>
+                                    <th>예약금</th>
+                                    <th>한줄소개</th>
+                                    <th>수정</th>
+                                </tr>
+                                </thead>
+                                <form>
+                                    <tbody class="table-striped">
+                                    <tr th:each="designerList:${session.designers}">
+                                        <td id="designerName" th:text="${designerList.designerName}"></td>
+                                        <td th:text="${designerList.designerPosition}"></td>
+                                        <td th:text="${designerList.apointPrice}"></td>
+                                        <td th:text="${designerList.designerIntroduce}"></td>
+                                        <td hidden id="designerShop" th:text="${designerList.designerShop}"></td>
+                                        <td onclick="designerUpdate($(this))">
+                                            <button type="button" class="btn btn-outline-primary">수정</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </form>
+                            </table>
+                            <h2 th:if="${session.designers} == null">조회된 디자이너가 없습니다.</h2>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
+
+
+    <!--    마이페이지 예약 목록 영역-->
+
+
 </main>
 
 <!--footer-->
