--- a/src/main/resources/templates/review/shopReviewDetail.html
+++ b/src/main/resources/templates/review/shopReviewDetail.html
@@ -24,7 +24,7 @@
 </header>
 
 <main>
-  <div class="container">
+  <div class="container pb-5">
     <div class="container-fluid">
       <form class="row g-3 border border-secondary rounded-3 p-5" id="frm" name="frm" method="post" action="">
 
