--- a/src/main/resources/templates/review/shopReviewTable.html
+++ b/src/main/resources/templates/review/shopReviewTable.html
@@ -24,7 +24,7 @@
 </header>
 
 <main>
-    <div class="container">
+    <div class="container pb-5">
         <div class="container-fluid">
             <div class="border border-secondary rounded-3 p-5">
                 <table class="table table-hover text-center" th:if="${reviewList.size()} > 0">
